--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "^3.2.0",
-    "styled-components": "^4.2.0"
+    "serialize-javascript": "^2.1.2",
+    "styled-components": "^4.2.0",
+    "tsutils": "^3.17.1",
+    "typescript": "^3.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
