--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "^3.2.0",
+    "react-scripts": "^3.3.0",
     "serialize-javascript": "^2.1.2",
     "styled-components": "^4.2.0",
     "tsutils": "^3.17.1",
