--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "handlebars": "^4.5.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "^3.3.0",
